# venturers

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragmentShader.frag  lighting.frag  vertexShader.vert
src/: main.cpp
src/camera/: camera.hpp
src/world/: terrain.cpp  terrain.hpp
